# travel-content-studio

./: .gitignore  README.md  Travel Content Studio.bat  Travel Content Studio.command  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
backend/: config.py  main.py  pyproject.toml  travel_content_studio.spec
backend/agents/: base.py  fact_checker.py  orchestrator.py  publishing_assistant.py  seo_optimizer.py  social_media_creator.py  story_generator.py  thumbnail_planner.py  trip_analyzer.py  video_script_writer.py
backend/api/: __init__.py  agents.py  blog.py  chat.py  content.py  feedback.py  files.py  insta360.py  jobs.py  logs.py  projects.py  reels.py  scenes.py  stock_photos.py  system.py  thumbnails.py  transcription.py  video_editing.py  videos.py  voiceover.py  youtube.py
backend/core/: __init__.py  chat_memory.py  database.py  errors.py  event_bus.py  feedback_engine.py  gpu_manager.py  logging_config.py  model_router.py  task_queue.py  user_rules.py
backend/data/: editing_knowledge_base.json  stock_photo_philosophy.json
backend/models/: __init__.py  db_models.py  schemas.py
backend/modules/: animated_captions.py  audio_enhance.py  auto_reframe.py  blog_studio.py  branding.py  chat_agent.py  color_grade.py  content_analyzer.py  content_engine.py  hook_optimizer.py  insta360_copilot.py  music_reels.py  photo_enhance.py  photo_metadata.py  photo_quality_gate.py  project_manager.py  quality_check.py  reel_generator.py  scene_analysis.py  smart_stitch.py  smart_thumbnail.py  speed_ramp.py  (+7 more)
(+92 files in other folders)
