[project]
name = "travel-content-studio-backend"
version = "0.1.0"
description = "Travel Content Studio - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-ulid>=3.0.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "websockets>=14.1",
    "aiofiles>=24.1.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
video = [
    "faster-whisper>=1.1.0",
    "scenedetect[opencv]>=0.6.5",
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
]
tts = [
    "kokoro>=0.9.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.11.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
